<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyle"
    tools:context="com.example.android.mymusicapp.RadioActivity">

    <LinearLayout style="@style/LinearLayoutWithBackgroundColor">

        <TextView
            android:id="@+id/genre_rock"
            style="@style/ListStyle"
            android:text="@string/genre_rock" />

        <TextView
            android:id="@+id/genre_pop"
            style="@style/ListStyle"
            android:text="@string/genre_pop" />

        <TextView
            android:id="@+id/genre_rap"
            style="@style/ListStyle"
            android:text="@string/genre_rap_hiphop" />

        <TextView
            android:id="@+id/genre_dance"
            style="@style/ListStyle"
            android:text="@string/genre_dance" />

        <TextView
            android:id="@+id/genre_jazz"
            style="@style/ListStyle"
            android:text="@string/genre_jazz_blues" />

        <TextView
            android:id="@+id/genre_instrumental"
            style="@style/ListStyle"
            android:text="@string/genre_instrumental" />

        <TextView
            android:id="@+id/genre_metal"
            style="@style/ListStyle"
            android:text="@string/genre_metal" />

    </LinearLayout>

</ScrollView>