<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mymusicapp.MainActivity">

    <TextView
        style="@style/mainActivityTextView_Offline"
        android:text="@string/offline_category" />

    <TextView
        style="@style/mainActivityTextView_Online"
        android:text="@string/online_category"/>

    <TextView
        style="@style/mainActivityTextView_Radio"
        android:text="@string/radio_category"/>

    <TextView
        style="@style/mainActivityTextView_Recent"
        android:text="@string/recent_category"/>

    <TextView
        style="@style/mainActivityTextView_Favorites"
        android:text="@string/favorites_category"/>

</LinearLayout>
