<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mymusicapp.OfflineActivity">

    <ImageView
        style="@style/BackgroundImage"
        android:src="@drawable/offline_music" />

    <LinearLayout style="@style/LinearLayoutWithImage">

        <TextView
            style="@style/secondaryActivity1"
            android:text="@string/search" />

        <TextView
            style="@style/secondaryActivity2"
            android:text="@string/albums" />

        <TextView
            style="@style/secondaryActivity3"
            android:text="@string/all_songs" />

    </LinearLayout>

</RelativeLayout>
